fix some errors + wrap suggestions

--- a/static/create.css
+++ b/static/create.css
@@ -227,6 +227,7 @@ legend {
 
 .suggestions {
     display: flex;
+    flex-wrap: wrap;
     gap: 4px;
     margin: 4px 10px;
     align-items: center;
